--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,6 @@ spring:
         driver-class-name: com.mysql.cj.jdbc.Driver
     jpa:
         hibernate:
-            ddl-auto: create-drop
+            ddl-auto: update
         database-platform: org.hibernate.dialect.MySQL5Dialect
         generate-ddl: true
